# openproject-mcp-server

./: .fastmcp.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/guides/: restart_mcp.md
scripts/: restart_mcp.ps1  verify_work_fields.py
src/: client.py  server.py
src/tools/: categories.py  projects.py  time_entries.py  work_packages.py
src/utils/: formatting.py
